tests/contract_testcases/polkadot/calls/payable_functions_03.sol

        contract c {
            fallback() public {

            }
        }
        
// ---- Expect: diagnostics ----
// error: 3:13-30: fallback function must be declared external
